--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ install:
 - pip install -r requirements.txt
 script:
 - python manage.py test
+- python manage.py collectstatic --noinput
+- python manage.py behave
 deploy:
   provider: heroku
   api_key:
