--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-Django>=3.0.2,<3.1.0
+Django>=3.0.6,<3.1.0
 gunicorn>=20.0.4,<20.1.0
-social-auth-app-django>=3.1.0,<3.2.0
-behave
-splinter
-chromedriver
+behave~=1.2.6
+splinter~=0.13.0
