--- a/Pipfile
+++ b/Pipfile
@@ -6,11 +6,13 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-gunicorn = "<20.1.0,>=20.0.4"
+gunicorn = ">=20.0.4,<20.1.0"
 behave-django = "==1.*"
-Django = "<3.1.0,>=3.0.5"
+Django = ">=3.0.6,<3.1.0"
 social-auth-app-django = ">=3.1.0,<3.2.0"
-django-crispy-forms = "*"
+django-crispy-forms = "==1.9.0"
+behave = "~=1.2.6"
+splinter = "~=0.13.0"
 
 [requires]
 python_version = "3.7"
